# sokoban-test

./: .editorconfig  .gitattributes  .gitignore  README.md  default_bus_layout.tres  export_presets.cfg  extension.wasm  index.html  level_selector.tscn  mesh_library.tres  project.godot  sokoban.gdextension  sokoban.gdextension.uid  theme.tres
.cargo/: config.toml
assets/: button_hover_style_box_flat.tres  button_normal_style_box.tres  icon.svg.import  panel_style_box_flat.tres  pushing_blend_tree.tres  state_machine.tres  theme.tres  title_theme.tres
docs/: BUILDING.md  architecture.md
extension/: Cargo.toml  bacon.toml
extension/.cargo/: config.toml
extension/src/: algorithm.rs  convert.rs  database.rs  direction.rs  grid_map.rs  level_map.rs  lib.rs  old_database.rs  orm.rs  solver_worker.rs  strategy.rs  utils.rs
extension/src/enums/: direction.rs  mod.rs
i18n/: en.po  translation.csv  translation.csv.import  translation.en.translation  translation.zh.translation  zh.po
locals/: en.csv  en.csv.import  en.en.translation  translation.csv  translation.csv.import  translation.en.translation  translation.zh.translation  translation.zh_TW.translation  zh.csv  zh.csv.import  zh.zh.translation
materials/: blur.tres
models/: button-floor-round-small.glb.import  button-floor-round.glb.import  button-floor-square-small.glb.import  button-floor-square.glb.import  column-low.glb.import  column-rounded-low.glb.import  column-rounded.glb.import  column-triangle-low.glb.import  column-triangle.glb.import  column.glb.import  crate-color.glb.import  crate.glb.import  (+69 more)
(+4515 files in other folders)
