[package]
name = "extension"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
godot = "0.5"
soukoban = { git = "https://github.com/ShenMian/soukoban" }
rusqlite = { version = "0.40", features = ["bundled", "serialize"] }

[profile.release]
codegen-units = 1
lto = "thin"
